added forecast link

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 
 <body>
-<h1>What should we wear today?</h1>
-<h2>Let's pick an outfit that will keep us cozy.</h2>
+<h1 id='main-heading'>What should we wear today?</h1>
+<h2 id='sub-heading'>Let's pick an outfit that will keep us cozy.</h2>
+
+<a id='forecast-link' target=_blank href='https://weather.com/weather/today/'>Click here for today's weather.</a>
 
 
 </body>
