--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
 
 <a id='forecast-link' target=_blank href='https://weather.com/weather/today/'>Click here for today's weather.</a>
 
+<label for='weather'>Select today's weather type:</label>
+    <select id='weather'>
+        <option value="">--Make a choice--</option>
+        <option value="sunny">Sunny</option>
+        <option value="rainy">Raining</option>
+        <option value="snowing">Snowing</option>
+        <option value="cloudy">Cloudy</option>
+    </select>
+
+<p></p>
 
 </body>
