--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 </head>
 
 <body>
+    <main id="main">
+
 <h1 id='main-heading'>What should we wear today?</h1>
 <h2 id='sub-heading'>Let's pick an outfit that will keep us cozy.</h2>
 
 <a id='forecast-link' target=_blank href='https://weather.com/weather/today/'>Click here for today's weather.</a>
 
+<div id='selector'>
 <label for='weather'>Select today's weather type:</label>
     <select id='weather'>
         <option value="">--Make a choice--</option>
@@ -19,7 +22,9 @@
         <option value="snowing">Snowing</option>
         <option value="cloudy">Cloudy</option>
     </select>
+</div>
 
 <p></p>
 
+</main>
 </body>
